Rdf Documents can now be used to start building api documentation
